# libg2pk

./: .gitignore  README.md
dependencies/libahocorasick/: PKGBUILD
dependencies/libg2pk/: PKGBUILD
dependencies/mecab-ko/: PKGBUILD
dependencies/mecab-ko-dict/: PKGBUILD
dict/: CMakeLists.txt  gen-batchim.py  gen-english.py
example/: build.sh  g2pk.cpp
lib/: CMakeLists.txt  build.sh  g2pk.pc.in  libg2pk.cpp  libg2pk.h  libg2pk_conf.h.in
